<resources>
    <string name="app_name">rapid-crypto-app</string>
    <string name="title_portfolio">Portfolio</string>
    <string name="title_currencies">Currencies</string>
    <string name="title_currency_detail">Currency Detail</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_settings">Settings</string>
    <string name="title_register"> Sign Up </string>
    <string name="title_profile">Profile</string>
    <string name="sell">Sell</string>
    <string name="remove">Remove</string>
    <string name="bought_for">Bought For</string>
    <string name="quantity">Quantity</string>
    <string name="current_price">Current Price</string>
    <string name="coin_image">Coin Image</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="currency_detail_text">Currency Detail fragment</string>
    <string name="sign_up">REGISTER</string>
    <string name="sign_up_description"> Trading, Portfolio, Conversion, Watchlist - everything you need to easily manage crypto assets, within one interface. </string>
    <string name="sign_up_agreement"> By proceeding you also agree to the Terms of Service and Privacy Policy. </string>
    <string name="input_placeholder_email">Email</string>
    <string name="input_placeholder_password">Password</string>
    <string name="input_placeholder_password_confirm">Confirm Password</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="register_now">Don\'t have an account? <b>Register now</b></string>
    <string name="login_now">Already have an account? <b>Login now</b></string>
    <string name="login_link"><b>Login</b></string>
    <string name="profile">Profile</string>
    <string name="currency">Currency</string>
    <string name="remaining_credits">Remaining Credits</string>
    <string name="delete_account">Delete Account</string>
    <string name="account">Account</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="dollar_sign_icon">Dollar Sign Icon</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="credit_card_icon">Credit Card Icon</string>
    <string name="sign_out">Sign Out</string>
    <string name="email_profile">Email</string>
    <string name="country">Country</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_changes">Save Changes</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="submit">Submit</string>
    <string name="email">Email*</string>
    <string name="enter_your_email_address_and_we_ll_send_you_an_email_to_reset_your_password">Enter your email address and we\'ll send you an email to reset your password</string>
    <string name="login">LOGIN</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="password">Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="buy">Buy</string>
    <string name="add_to_watchlist">Add To Watchlist</string>
    <string name="edit">Edit</string>
    <string name="total_amount">Total Amount</string>
    <string name="app_logo">App Logo</string>
    <string-array name="countries_array">
        <item>United States</item>
        <item>Canada</item>
        <item>China</item>
        <item>India</item>
        <item>Germany</item>
        <item>France</item>
        <item>Italy</item>
    </string-array>
</resources>