<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.dalhousie.rapid_crypto_app.viewmodels.loginViewModels.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:background="@color/whiteBlue"
        android:id="@+id/container">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <!--TextView bound to LoginViewModel-->
            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="149dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{viewModel::onForgotPassClicked}"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:textColor="#787878"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.854"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword"
                app:layout_constraintVertical_bias="0.125" />

            <!--TextView bound to LoginViewModel-->
            <TextView
                android:id="@+id/text_RegisterNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="48dp"
                android:text="@string/register_now"
                android:onClick="@{viewModel::onRegistrationClicked}"
                android:textColor="#787878"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                app:layout_constraintVertical_bias="0.685" />

            <!--EditText bound to LoginViewModel-->
            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="354dp"
                android:layout_height="57dp"
                android:layout_marginTop="48dp"
                android:paddingEnd="8dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                app:addTextChangedListener="@{viewModel.emailTextWatcher}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_login" />

            <!--EditText bound to LoginViewModel-->
            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_marginTop="12dp"
                android:paddingEnd="8dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                app:addTextChangedListener="@{viewModel.passwordTextWatcher}"
                app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/inputEmail"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

            <!--Button bound to LoginViewModel-->
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="354dp"
                android:layout_height="49dp"
                android:layout_marginTop="96dp"
                android:background="@drawable/ic_btn_bg"
                android:onClick="@{viewModel::onLoginClicked}"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/inputPassword"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/inputPassword"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:layout_marginTop="48dp"
                android:adjustViewBounds="true"
                android:contentDescription="App Logo"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.431"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/rapid_crypto_logo" />

            <TextView
                android:id="@+id/text_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/login"
                android:textColor="#404040"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_logo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</layout>
