<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.dalhousie.rapid_crypto_app.viewmodels.forgotPasswordViewModels.ForgotPasswordViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.forgotPassword.ForgotPasswordFragment"
        android:background="@color/whiteBlue"
        android:padding="15dp"
        android:id="@+id/container">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:layout_marginTop="48dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.431"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/rapid_crypto_logo"
                android:contentDescription="App Logo" />

            <TextView
                android:id="@+id/text_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/forgot_your_password"
                android:textColor="#404040"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_logo" />

            <TextView
                android:id="@+id/forgot_pass_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:text="@string/enter_your_email_address_and_we_ll_send_you_an_email_to_reset_your_password"
                android:textAlignment="center"
                android:textColor="#787878"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.551"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_login" />

            <!--EditText bound to ForgotPasswordViewModel-->
            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="354dp"
                android:layout_height="57dp"
                android:layout_marginTop="64dp"
                android:background="@color/white"
                android:ems="10"
                app:addTextChangedListener="@{viewModel.emailTextWatcher}"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_pass_details" />

            <!--Button bound to ForgotPasswordViewModel-->
            <Button
                android:id="@+id/btnSendEmail"
                android:layout_width="354dp"
                android:layout_height="49dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/ic_btn_bg"
                android:onClick="@{viewModel::onSendEmailClicked}"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/inputEmail"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</layout>